--- a/80days/templates/base.html
+++ b/80days/templates/base.html
@@ -31,7 +31,10 @@
 
   </head>
 
-  <body>
+
+  {% block body_header %} 
+  <body> 
+  {% endblock %}
 
     <div class="header navbar">
       <div class="container">
