--- a/80days/templates/pages/about.html
+++ b/80days/templates/pages/about.html
@@ -1,1 +1,40 @@
 {% extends "base.html" %}
+
+{% block body_header %} 
+<body class="balloon_background"> 
+{% endblock %}
+
+{% block content %}
+
+<div class="about_info">  
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-8">
+  <div class="about_links">
+  <h2>What is this all about?</h2>
+  A simple competition.
+
+  <h3>Registration and teams</h3>
+
+
+  <h3>Imagery</h3>
+
+  <h4>Yale Center for British Art</h4>
+
+  A Balloon Ascent near Greenwich
+  Hospital <a href="http://collections.britishart.yale.edu/vufind/Record/3643405">Yale
+    Center for British Art, Paul Mellon Collection</a>
+
+
+  <h4>Wikimedia</h4>
+
+  Image by Roke (Self-published work by Roke)
+  [<a href="http://www.gnu.org/copyleft/fdl.html">GFDL</a>
+  or <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>], <a href="http://commons.wikimedia.org/wiki/File%3AAround_the_World_in_Eighty_Days_map.png">via
+    Wikimedia Commons</a> 
+
+  </div>
+  </div>
+</div>
+
+{% endblock %}
