--- a/80days/templates/pages/home.html
+++ b/80days/templates/pages/home.html
@@ -1,1 +1,18 @@
 {% extends "base.html" %}
+
+{% block body_header %}
+<body class="balloon_background">
+{% endblock %}
+
+{% block title %}Around the world in 80 days{% endblock %}
+
+
+{% block content %}
+<h2 align="center"> Coming soon... </h2>
+
+<!-- <p><img src="{{ STATIC_URL }}images/Around_the_World_in_Eighty_Days_map.png" /></p> -->
+
+
+{% endblock %}
+
+
