thrashing around deciding what to use as django templates v static content.

--- a/80days/static/app/components/tabs/tabs.html
+++ b/80days/static/app/components/tabs/tabs.html
@@ -15,13 +15,13 @@
 <![endif]-->
 
 <!--  Home Tab's Content  -->
-<div ng-show="tab.isSelected(1)" ng-include="'home/home.html'"> </div>
+<div ng-show="tab.isSelected(1)" ng-include="'static/app/home/home.html'"> </div>
 
 <!--  Competitions Tab's Content  -->
-<div ng-show="tab.isSelected(2)" ng-include="'competitions/competitions.html'"> </div>
+<div ng-show="tab.isSelected(2)" ng-include="'static/app/competitions/competitions.html'"> </div>
 
 <!--  Teams Tab's Content  -->
-<div ng-show="tab.isSelected(3)" ng-include="'teams/teams.html'"> </div>
+<div ng-show="tab.isSelected(3)" ng-include="'static/app/teams/teams.html'"> </div>
 
 
 <div>Angular seed app: v<span app-version></span></div>
