--- a/80days/templates/pages/home.html
+++ b/80days/templates/pages/home.html
@@ -12,6 +12,17 @@
 
 <!-- <p><img src="{{ STATIC_URL }}images/Around_the_World_in_Eighty_Days_map.png" /></p> -->
 
+<app-tabs></app-tabs>
+
+<div ng-controller="HomeCtrl as view" align="center">
+<h2> Coming soon... </h2>
+
+<h3>{$ view.today|date $} is today's date  </h3>
+<h3>{$ (view.today + (24 * 3600 * 80 * 1000)) |date $} is 80 days from today </h3>
+<h3>{$ (view.today - (24 * 3600 * 80 * 1000)) |date $} was 80 days ago </h3>
+
+</div>
+
 
 {% endblock %}
 
