--- a/80days/templates/pages/home2.html
+++ b/80days/templates/pages/home2.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Around the world in 80 days</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href={% static "app/bower_components/html5-boilerplate/css/normalize.css"%}>
