--- a/80days/templates/pages/tabs.html
+++ b/80days/templates/pages/tabs.html
@@ -21,7 +21,7 @@
 <div ng-show="tab.isSelected(2)" ng-include="'competitions/competitions.html'"> </div>
 
 <!--  Teams Tab's Content  -->
-<div ng-show="tab.isSelected(3)" ng-include="teams/teams.html'"> </div>
+<div ng-show="tab.isSelected(3)" ng-include="'teams/teams.html'"> </div>
 
 
 <div>Angular seed app: v<span app-version></span></div>
