More gymnastics getting django serving everything and fixing up links

--- a/80days/templates/base.html
+++ b/80days/templates/base.html
@@ -31,18 +31,18 @@
     {% block angular %}
       
       <!-- stuff for my app -->
-      <script src={% static "app/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js" %}></script>
+      <script src={% static "bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js" %}></script>
 
-      <script src={% static "app/bower_components/angular/angular.js" %}></script>
-      <script src={% static "app/bower_components/angular-route/angular-route.js" %}></script>
-      <script src={% static "app/bower_components/angular-cookies/angular-cookies.js" %}></script>
-      <script src={% static "app/app.js" %}></script>
-      <script src={% static "app/home/home.js" %}></script>
-      <script src={% static "app/teams/teams.js" %}></script>
-      <script src={% static "app/competitions/competitions.js" %}></script>
-      <script src={% static "app/components/version/version.js" %}></script>
-      <script src={% static "app/components/version/version-directive.js" %}></script>
-      <script src={% static "app/components/version/interpolate-filter.js" %}></script>
+      <script src={% static "bower_components/angular/angular.js" %}></script>
+      <script src={% static "bower_components/angular-route/angular-route.js" %}></script>
+      <script src={% static "bower_components/angular-cookies/angular-cookies.js" %}></script>
+      <script src={% static "app.js" %}></script>
+      <script src={% static "home/home.js" %}></script>
+      <script src={% static "teams/teams.js" %}></script>
+      <script src={% static "competitions/competitions.js" %}></script>
+      <script src={% static "components/version/version.js" %}></script>
+      <script src={% static "components/version/version-directive.js" %}></script>
+      <script src={% static "components/version/interpolate-filter.js" %}></script>
     {% endblock %}
 
   </head>
