--- a/80days/templates/competitions/competitions.html
+++ b/80days/templates/competitions/competitions.html
@@ -7,6 +7,8 @@
     <ul>
       <div ng-repeat="competition in comps.competitions">
 	<li> Name: {$ competition.name $} </li>
+	<li> Description: {$ competition.description $} </li>
+	<li> Start: {$ competition.start $} </li>
       </div>
     </ul>
   </div>
