--- a/80days/templates/competition/enter.html
+++ b/80days/templates/competition/enter.html
@@ -1,6 +1,4 @@
 
 <div>
-  <button ng-show=1>Enter</button>
-  <p>is entered? {$ enrol.isEntered(competition) $}
-  <p>is started? {$ coms.started(competition) $}
+  <button>Enter</button>
 </div>
