--- a/80days/templates/pages/home2.html
+++ b/80days/templates/pages/home2.html
@@ -23,8 +23,11 @@
 
   <script src={% static "bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"%}></script>
 </head>
-<body class="balloon_background">
+<body class="plain_background">
   <!-- application tabs -->
+  
+  <p> User is: {{ user }}
+  
   <app-tabs></app-tabs>
   
   <ul>
