--- a/80days/templates/competition/enter.html
+++ b/80days/templates/competition/enter.html
@@ -1,4 +1,8 @@
 
 <div>
-  <button ng-click="enrol.enter(competition)">Enter</button>
+  <form name="enterForm" action="enrol.enrol(competition)" >
+    Nick-name: <input type="text" ng-model="enrol.competitor.nickname">
+    <input type="submit" value="Enter Competion" />
+  </form>
+  <!-- <button ng-click="enrol.enter(competition)">Enter</button> -->
 </div>
