Don't need to specify the controller,

--- a/80days/templates/components/tabs/tabs.html
+++ b/80days/templates/components/tabs/tabs.html
@@ -1,4 +1,4 @@
-<section ng-init="tab.tab = 1" ng-controller="TabController as tab">
+<section>
 <ul class="menu">
   <li ng-class="{ active: tab.isSelected(1) }">
     <a href ng-click="tab.selectTab(1)">Home</a></li>
