helps if you use the right tag name.

--- a/80days/templates/competitors/competitors.html
+++ b/80days/templates/competitors/competitors.html
@@ -1,4 +1,6 @@
-<h3 ng-show="competion.competitors.length"> Entries: </h3>
-<div ng-repeat="entry in competition.competitors">
-  <competition-info></competition-info>
+<div ng-show="competition.competitors.length">
+  <h3> Entries: </h3>
+  <div ng-repeat="entry in competition.competitors">
+    <competitor-info></competitor-info>
+  </div>
 </div>
