--- a/80days/templates/competition/competition.html
+++ b/80days/templates/competition/competition.html
@@ -11,11 +11,18 @@
   <p> Number of competitors:  <strong>{$ competition.competitors.length $}</strong> </p>
 </div>
 
+
 <competitor-list ng-show="competition.competitors.length"></competitor-list>
 
 <competition-enter 
    ng-show="(!comps.finished(competition)) &&  
-    	    (comps.notEntered(competition))">
+    	    (comps.notEntered(competition))"></competition-enter>
 
-</competiton-enter>
+<team-list ng-show="competition.teams.length"></team-list>
 
+<team-create 
+   ng-show="(!comps.finished(competition)) &&  
+	    (comps.isEntered(competition)) &&
+    	    (!comps.isTeamMember(competition))"></team-create>
+
+<hr>
