Change home2.html to extend homebase.html template

--- a/80days/templates/pages/home2.html
+++ b/80days/templates/pages/home2.html
@@ -1,37 +1,20 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+{% extends "homebase.html" %}
 {% load staticfiles i18n %}
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Around the world in 80 days</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href={% static "bower_components/html5-boilerplate/css/normalize.css"%}>
-  <link rel="stylesheet" href={% static "bower_components/html5-boilerplate/css/main.css"%}>
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href={% static "css/project.css"%}>
 
+{% block extrastyle %}
+<link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href={% static "css/project.css" %}>
+{% endblock %}
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
-  <script src={% static "bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"%}></script>
-</head>
-<body class="plain_background">
-  <!-- application tabs -->
+{% block content %}
   
-  <p> User is: {{ user }}
-  
-  <app-tabs></app-tabs>
-  
-  <ul>
+<div class="container">
+
+  <div class="col-xs-8">
+    <app-tabs  class="balloon_background"></app-tabs>
+  </div>
+
+  <ul class "col-xs-offset-10">
           {% if request.user.is_authenticated %}
             <li><a href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>
             <li><a href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
@@ -42,20 +25,17 @@
 
   </ul>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
+</div>
 
-  <script src={% static "bower_components/angular/angular.js"%}></script>
-  <script src={% static "bower_components/angular-route/angular-route.js"%}></script>
-  <script src={% static "bower_components/angular-cookies/angular-cookies.js"%}></script>
+{% endblock %}
 
-  <script src="app.js"></script>
-  <script src="home/home.js"></script>
-  <script src="teams/teams.js"></script>
-  <script src="competitions/competitions.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
-</body>
-</html>
+{% block appcode %}
+<!-- Javascript for the application -->
+<script src="app.js"></script>
+<script src="home/home.js"></script>
+<script src="teams/teams.js"></script>
+<script src="competitions/competitions.js"></script>
+<script src="components/version/version.js"></script>
+<script src="components/version/version-directive.js"></script>
+<script src="components/version/interpolate-filter.js"></script>
+{% endblock %}
