--- a/80days/templates/pages/home2.html
+++ b/80days/templates/pages/home2.html
@@ -9,22 +9,26 @@
 {% block content %}
   
 <div class="container">
+  
+  <div class="row">
+    <div class="col-md-8">
+      <app-tabs  class="balloon_background"></app-tabs>
+    </div>
 
-  <div class="col-xs-8">
-    <app-tabs  class="balloon_background"></app-tabs>
+    <div class "col-md-2"><p>foo</p></div>
+    <div class "col-md-2">
+      <ul>
+	{% if request.user.is_authenticated %}
+	<li><a href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>
+	<li><a href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
+	{% else %}
+	<li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
+	<li><a href="{% url 'account_login' %}">{% trans "Log In" %}</a></li>
+	{% endif %}
+
+      </ul>
+    </div>
   </div>
-
-  <ul class "col-xs-offset-10">
-          {% if request.user.is_authenticated %}
-            <li><a href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>
-            <li><a href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
-          {% else %}
-            <li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
-            <li><a href="{% url 'account_login' %}">{% trans "Log In" %}</a></li>
-          {% endif %}
-
-  </ul>
-
 </div>
 
 {% endblock %}
