--- a/80days/templates/components/tabs/tabs.html
+++ b/80days/templates/components/tabs/tabs.html
@@ -7,7 +7,7 @@
     <a href ng-click="tab.selectTab(2)">Competitions</a></li>
 
   <li ng-class="{ active: tab.isSelected(3) }">
-    <a href ng-click="tab.selectTab(3)">Teams</a></li>
+    <a href ng-click="tab.selectTab(3)">Activities</a></li>
 </ul>
 
 <!--[if lt IE 7]>
@@ -20,8 +20,8 @@
 <!--  Competitions Tab's Content  -->
 <div ng-show="tab.isSelected(2)" ng-include="'competitions/competitions.html'"> </div>
 
-<!--  Teams Tab's Content  -->
-<div ng-show="tab.isSelected(3)" ng-include="'teams/teams.html'"> </div>
+<!--  Activities Tab's Content  -->
+<div ng-show="tab.isSelected(3)" ng-include="'activities/activities.html'"> </div>
 
 
 <div>Angular seed app: v<span app-version></span></div>
