--- a/80days/templates/competition/competition.html
+++ b/80days/templates/competition/competition.html
@@ -4,10 +4,10 @@
   <h3> {$ competition.name $} </h3>
   <p> {$ competition.description $} <p>
   
-  <p> Start: <strong>{$ comps.startDate(competition) | date $}</strong> <p>
-  <p> End: <strong>{$ comps.endDate(competition) | date $}</strong> </p>
-  <p> Days: <strong>{$ competition.days $}</strong> <p>
-  <p> Team: size: <strong>{$ competition.team_size $}</strong> </p>
+  <p> Start: <strong>{$ comps.startDate(competition) | date $}</strong> 
+      End: <strong>{$ comps.endDate(competition) | date $}</strong> 
+      Days: <strong>{$ competition.days $}</strong> xxx
+      Team: size: <strong>{$ competition.team_size $}</strong> 
   <p> Number of competitors:  <strong>{$ competition.competitors.length $}</strong> </p>
 </div>
 
