Give number of teams in a competition.

--- a/80days/templates/competition/panels.html
+++ b/80days/templates/competition/panels.html
@@ -14,6 +14,7 @@
       
   <p>Team: size: <strong>{$ competition.team_size $}</strong> </p>
   <p> Number of competitors:  <strong>{$ competition.competitors.length $}</strong> </p>
+  <p> Number of teams:  <strong>{$ competition.teams.length $}</strong> </p>
 </div>
 
 <ul class="menu-panel">
