--- a/80days/templates/teams/teams.html
+++ b/80days/templates/teams/teams.html
@@ -1,5 +1,4 @@
-<p>This is the partial for Teams.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {$ 'Current version is v%VERSION%.' | interpolate $}
-</p>
+<team-list></team-list>
+controller: {$ name $}<br />
+
+<button ng-click="teamsController.showCompetition()">Alert compo</button>
